recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: ')' expected but ';' found.
	avance(length / ((levels + 1) * (levels + 1));
                                                     ^